--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "sneakygames-bot",
   "version": "0.1.5",
   "description": "Discord.js bot for Sneaky's SneakyGames server.",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "run": "node src/index.js"
+    "run": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/sneakyhub/sneakygamesjsbot/issues"
   },
-  "homepage": "https://github.com/sneakyhub/sneakygamesjsbot#readme"
+  "homepage": "https://github.com/sneakyhub/sneakygamesjsbot#readme",
+  "dependencies": {
+    "discord.js": "^13.6.0",
+    "dotenv": "^11.0.0",
+    "fs": "^0.0.1-security"
+  }
 }
