--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
   "dependencies": {
     "discord.js": "^13.6.0",
     "dotenv": "^11.0.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
+    "ms": "^2.1.3",
+    "quickmongo": "^5.1.1",
+    "uuid": "^8.3.2"
   }
 }
