--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
+    "token": "OTk1Njg5MzYxNDUyNTY0NTMy.GQv0qN.44mtHcWMk5Bz6fFKjTI35KRq1jipiLARkK7lUQ",
     "prefix": "!",
     "dashboardurl": "",
     "dashboardtoken": ""
