--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-    "token": "OTk1Njg5MzYxNDUyNTY0NTMy.GQv0qN.44mtHcWMk5Bz6fFKjTI35KRq1jipiLARkK7lUQ",
+    "token": "OTk2Mzk4NjUwMDUxNzk2OTkz.GVnYAT.Jyw2jPe9H89VFHmI1uZfA0dUOxzxab_0JXUJr8",
     "prefix": "!",
     "dashboardurl": "",
     "dashboardtoken": ""
 }
+.
